tests/baselines/reference/symbolProperty57.errors.txt
tests/cases/conformance/es6/Symbols/symbolProperty57.ts(6,5): error TS2538: Type 'any' cannot be used as an index type.
tests/cases/conformance/es6/Symbols/symbolProperty57.ts(6,12): error TS2339: Property 'nonsense' does not exist on type 'SymbolConstructor'.


==== tests/cases/conformance/es6/Symbols/symbolProperty57.ts (2 errors) ====
    var obj = {
        [Symbol.iterator]: 0
    };
    
    // Should give type 'any'.
    obj[Symbol["nonsense"]];
        ~~~~~~~~~~~~~~~~~~
!!! error TS2538: Type 'any' cannot be used as an index type.
               ~~~~~~~~~~
!!! error TS2339: Property 'nonsense' does not exist on type 'SymbolConstructor'.